// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Frame expression translation > With options {"asciiOnly":false,"lineNumber":false} > should translate code frame hello world 1`] = `
"┌────────────────────────────┐
│#include <iostream>         │
│using namespace std;        │
│                            │
│int main()                  │
│{                           │
│    cout << "Hello, World!";│
│    return 0;               │
│}                           │
└────────────────────────────┘
"
`;

exports[`Frame expression translation > With options {"asciiOnly":false,"lineNumber":true} > should translate code frame hello world 1`] = `
"┌─┬────────────────────────────┐
│1│#include <iostream>         │
│2│using namespace std;        │
│3│                            │
│4│int main()                  │
│5│{                           │
│6│    cout << "Hello, World!";│
│7│    return 0;               │
│8│}                           │
└─┴────────────────────────────┘
"
`;

exports[`Frame expression translation > With options {"asciiOnly":true,"lineNumber":false} > should translate code frame hello world 1`] = `
" ____________________________ 
│                            │
│#include <iostream>         │
│using namespace std;        │
│                            │
│int main()                  │
│{                           │
│    cout << "Hello, World!";│
│    return 0;               │
│}                           │
│____________________________│
"
`;

exports[`Frame expression translation > With options {"asciiOnly":true,"lineNumber":true} > should translate code frame hello world 1`] = `
" ______________________________ 
│ |                            │
│1|#include <iostream>         │
│2|using namespace std;        │
│3|                            │
│4|int main()                  │
│5|{                           │
│6|    cout << "Hello, World!";│
│7|    return 0;               │
│8|}                           │
│_|____________________________│
"
`;
